<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactions.UpdateTransactionFragment"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_transaction"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <RadioButton
                android:id="@+id/radio_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_button"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/primary"
                />
            <RadioButton
                android:id="@+id/radio_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_button"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/primary"
                />
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:backgroundTint="#fff"
                android:hint="@string/name"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <AutoCompleteTextView
                android:id="@+id/category_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:backgroundTint="#fff"
                android:hint="@string/category"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:backgroundTint="#fff"
                android:hint="@string/date"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/amount_edit_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/currency_default"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:inputType="numberDecimal"
                    android:backgroundTint="#fff"
                    android:hint="@string/amount"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        >
        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/update_button"
            android:textColor="#000"
            android:textSize="15sp"
            android:padding="10dp"
            android:shadowRadius="2"
            android:shadowDx="4"
            android:shadowDy="4"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/delete_button"
            android:textColor="#000"
            android:textSize="15sp"
            android:padding="10dp"
            android:shadowRadius="2"
            android:shadowDx="4"
            android:shadowDy="4"
            android:layout_weight="0.5"

            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</LinearLayout>