<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categories.UpdateCategoryFragment"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_category"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/category_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:backgroundTint="#fff"
                android:hint="@string/name"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/category_color_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/primary"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        >
    <Button
        android:id="@+id/update_category_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/update_button"
        android:textColor="#000"
        android:textSize="15sp"
        android:padding="10dp"
        android:shadowRadius="2"
        android:shadowDx="4"
        android:shadowDy="4"
        android:layout_weight="0.5"
        style="?android:attr/buttonBarButtonStyle" />
    <Button
        android:id="@+id/delete_category_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/delete_button"
        android:textColor="#000"
        android:textSize="15sp"
        android:padding="10dp"
        android:shadowRadius="2"
        android:shadowDx="4"
        android:shadowDy="4"
        android:layout_weight="0.5"
        style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>