<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactions.TransactionListsFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/total"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/shadow_text"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/circles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/expense"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:background="@drawable/circle"
                    android:text="@string/expense"
                    android:gravity="center"
                    android:shadowColor="@color/shadow_text"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/red"
                    android:padding="20dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/income"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:background="@drawable/circle"
                    android:text="@string/income"
                    android:gravity="center"
                    android:shadowColor="@color/shadow_text"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:textColor="@color/green"
                    android:padding="20dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/transactions_list_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactions_list"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ic_add_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:tintMode="@android:color/white"
        app:borderWidth="0dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/add_transactions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
